fix styling issue: overflow not scrollable on some screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,8 +212,8 @@ kbd {
 
 /*Media Queries*/
 
-/*Vertically Center Game Medium Screen Size+*/
-@media screen and (min-width: 768px) {
+/*Vertically Center Game If Screen Height > Game Height*/
+@media screen and (min-height: 850px) {
     body {
         height: 100vh;
         display: flex;
